# simple-bevy-game

./: Cargo.toml  README.md
src/: main.rs  systems.rs
src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/enemy/: mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/score/: components.rs  mod.rs  resources.rs  systems.rs
src/game/star/: mod.rs  resources.rs  systems.rs
src/game/weapon/: mod.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interaction.rs  layout.rs  mod.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs  systems.rs
src/star/: components.rs  systems.rs
